--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "@types/react-transition-group": "^4.4.0",
     "firebase": "^8.1.1",
     "postcss": "^8.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive": "^8.1.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
