--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-iframe": "^1.8.0",
-    "react-responsive-carousel": "^3.2.10",
     "react-responsive": "^8.1.1",
+    "react-responsive-carousel": "^3.2.10",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
