--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postcss": "^8.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.10",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
