--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-iframe": "^1.8.0",
+    "react-input-mask": "^2.0.4",
     "react-responsive": "^8.1.1",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
