--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postcss": "^8.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
     "react-iframe": "^1.8.0",
     "react-input-mask": "^2.0.4",
     "react-responsive": "^8.1.1",
