--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
+    "react-icons": "^4.1.0",
     "react-iframe": "^1.8.0",
     "react-input-mask": "^2.0.4",
     "react-responsive": "^8.1.1",
