--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@wojtekmaj/react-daterange-picker": "^3.0.1",
     "axios": "^0.21.1",
     "firebase": "^8.1.1",
+    "moment": "^2.29.1",
     "postcss": "^8.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
