--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.1.0",
     "react-iframe": "^1.8.0",
     "react-input-mask": "^2.0.4",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-responsive": "^8.1.1",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
