--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/react-transition-group": "^4.4.0",
     "@wojtekmaj/react-daterange-picker": "^3.0.1",
     "axios": "^0.21.1",
-    "firebase": "^8.1.1",
+    "firebase": "^8.2.9",
     "moment": "^2.29.1",
     "postcss": "^8.1.10",
     "react": "^17.0.1",
@@ -19,6 +19,7 @@
     "react-iframe": "^1.8.0",
     "react-input-mask": "^2.0.4",
     "react-modern-calendar-datepicker": "^3.1.6",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-responsive": "^8.1.1",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
