--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-transition-group": "^4.4.0",
     "@wojtekmaj/react-daterange-picker": "^3.0.1",
     "axios": "^0.21.1",
+    "emailjs-com": "^2.6.4",
     "firebase": "^8.2.9",
     "moment": "^2.29.1",
     "postcss": "^8.1.10",
@@ -24,7 +25,7 @@
     "react-responsive": "^8.1.1",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "react-star-ratings-component": "^1.0.1",
     "react-transition-group": "^1.2.1",
     "sweetalert": "^2.1.2",
